# kinect

./: .gitignore  CMakeLists.txt  Makefile  README.md  base64.h  buffer.c  buffer.h  image.c  image.cpp  image.h  kinect-depth-ascii.c  kinect-depth-png.c  kinect-depth-png.cpp  kinect.c  kinect.cpp  kinect.h
browser/: client.html  edge.html  netstring.js  server
cmake/Hunter/: config.cmake
